--- a/aianalyticstestapp/package.json
+++ b/aianalyticstestapp/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.89.0",
     "next": "^16.0.10",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "supabase": "^2.67.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
