--- a/aianalyticstestapp/package.json
+++ b/aianalyticstestapp/package.json
@@ -9,10 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.36.5",
     "@supabase/supabase-js": "^2.89.0",
     "next": "^16.0.10",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "supabase": "^2.67.3"
   },
   "devDependencies": {
