--- a/aianalyticstestapp/package.json
+++ b/aianalyticstestapp/package.json
@@ -9,12 +9,26 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@arizeai/openinference-instrumentation-openai": "^4.0.5",
     "@clerk/nextjs": "^6.36.5",
+    "@langfuse/openai": "^4.5.1",
+    "@langfuse/otel": "^4.5.1",
+    "@langtrase/typescript-sdk": "^6.3.7",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.209.0",
+    "@opentelemetry/instrumentation": "^0.209.0",
+    "@opentelemetry/resources": "^2.3.0",
+    "@opentelemetry/sdk-node": "^0.209.0",
+    "@opentelemetry/sdk-trace-node": "^2.3.0",
     "@supabase/supabase-js": "^2.89.0",
+    "dotenv": "^17.2.3",
+    "galileo": "^1.32.0",
+    "langsmith": "^0.4.5",
     "next": "^16.0.10",
+    "openai": "^6.15.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "supabase": "^2.67.3"
+    "supabase": "^2.67.3",
+    "tsx": "^4.21.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
